[gd_scene load_steps=9 format=3 uid="uid://cf78je1y8dpu3"]

[ext_resource type="Script" path="res://src/ui/components/auth/magic_login.gd" id="1_qmbqb"]
[ext_resource type="Texture2D" uid="uid://ie2f054vn7kc" path="res://src/ui/components/auth/images/magic.svg" id="2_y8nwo"]
[ext_resource type="Texture2D" uid="uid://wywgcgt311ft" path="res://src/ui/components/auth/images/google.svg" id="3_cysqt"]
[ext_resource type="FontFile" uid="uid://cvtogigxks73f" path="res://assets/themes/fonts/inter/Inter-Light.ttf" id="3_yrup3"]
[ext_resource type="Texture2D" uid="uid://cbukvmu67blst" path="res://src/ui/components/auth/images/discord.svg" id="5_gtxay"]
[ext_resource type="Texture2D" uid="uid://kxlueau7wo2u" path="res://src/ui/components/auth/images/apple.svg" id="6_2satq"]
[ext_resource type="Texture2D" uid="uid://b1wknyg6nwrwo" path="res://src/ui/components/auth/images/x.svg" id="7_2i4jf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s14u7"]

[node name="MagicLogin" type="VBoxContainer"]
script = ExtResource("1_qmbqb")

[node name="HBoxContainerMagicInfo" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainerMagicInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Access secured by"

[node name="Magic" type="TextureRect" parent="HBoxContainerMagicInfo"]
layout_mode = 2
texture = ExtResource("2_y8nwo")

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_s14u7")

[node name="ButtonGoogle" type="Button" parent="."]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
focus_mode = 0
theme_type_variation = &"RedButton"
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/icon_max_width = 24
theme_override_fonts/font = ExtResource("3_yrup3")
theme_override_font_sizes/font_size = 16
text = "  Sign in with Google"
icon = ExtResource("3_cysqt")
alignment = 0

[node name="HSeparator2" type="HSeparator" parent="."]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_s14u7")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ButtonDiscord" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_type_variation = &"RedButton"
theme_override_colors/font_color = Color(0.458824, 0.458824, 0.458824, 1)
theme_override_constants/icon_max_width = 24
theme_override_fonts/font = ExtResource("3_yrup3")
theme_override_font_sizes/font_size = 16
icon = ExtResource("5_gtxay")
alignment = 0
icon_alignment = 1

[node name="ButtonApple" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_type_variation = &"RedButton"
theme_override_colors/font_color = Color(0.458824, 0.458824, 0.458824, 1)
theme_override_constants/icon_max_width = 24
theme_override_fonts/font = ExtResource("3_yrup3")
theme_override_font_sizes/font_size = 16
icon = ExtResource("6_2satq")
alignment = 0
icon_alignment = 1

[node name="ButtonX" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_type_variation = &"RedButton"
theme_override_colors/font_color = Color(0.458824, 0.458824, 0.458824, 1)
theme_override_constants/icon_max_width = 24
theme_override_fonts/font = ExtResource("3_yrup3")
theme_override_font_sizes/font_size = 16
icon = ExtResource("7_2i4jf")
alignment = 0
icon_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="."]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_s14u7")

[connection signal="pressed" from="ButtonGoogle" to="." method="_on_button_google_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonDiscord" to="." method="_on_button_discord_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonApple" to="." method="_on_button_apple_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonX" to="." method="_on_button_x_pressed"]
